k8s.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: recursive-ruins
  namespace: minsky
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rruins.experimental.minsky.cc`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: recursive-ruins
          port: 80
  tls:
    certResolver: letsencrypt


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: recursive-ruins
  namespace: minsky
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - rruins.experimental.minsky.cc
      secretName: rruins.experimental.minsky.cc-cert
  rules:
    - host: rruins.experimental.minsky.cc
      http:
        paths:
          - path: /
            backend:
              serviceName: recursive-ruins
              servicePort: web

---
kind: Service
apiVersion: v1
metadata:
  name: recursive-ruins
  namespace: minsky
spec:
  selector:
    app: recursive-ruins
  type: ClusterIP
  ports:
    - name: web
      port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recursive-ruins
  namespace: minsky
  labels:
    app: recursive-ruins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recursive-ruins
  template:
    metadata:
      name: recursive-ruins
      labels:
        app: recursive-ruins
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: recursive-ruins
          image: docker.minsky.cc/recurrent-ruins
          imagePullPolicy: Always
      restartPolicy: Always
